created home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1 class="text-3xl font-bold underline text-red-500">
-  Hello world!
-</h1>
-<app-blog></app-blog>
+<mat-toolbar>
+  <span>My Blogs</span>
+</mat-toolbar>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
