--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
                   </p>
                 </mat-card-content>
                 <mat-card-actions>
-                  <button mat-button>Read More</button>
+                  <button [routerLink]="[blog._id]" mat-button>Read More</button>
                 </mat-card-actions>
               </mat-card>
         </ng-container>
