button to create blog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <mat-toolbar>
-  <span>My Blogs</span>
+  <div class="container flex justify-between items-center">
+    <span>My Blogs</span>
+    <button mat-flat-button color="primary">Create Blog</button>
+  </div>
+  
 </mat-toolbar>
 <div class="container">
   <router-outlet></router-outlet>
