started creating blog form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <div class="container flex justify-between items-center">
     <span>My Blogs</span>
-    <button mat-flat-button color="primary">Create Blog</button>
+    <button (click)="openDialog()" mat-flat-button color="primary">Create Blog</button>
   </div>
   
 </mat-toolbar>
